manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ameta-banking-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ameta-banking-core
  template:
    metadata:
      labels:
        app: ameta-banking-core
    spec:
      containers:
        - name: ameta-banking-core
          image: ACR/IMAGE_REGISTRY:TAG
          ports:
          - containerPort: 80
