manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ameta-banking-core-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ameta-banking-core
  type: ClusterIP
