manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: ameta-banking-core-ingress
spec:
  ingressClassName: nginx-external
  rules:
  - host: sabi.dev2.katsupay.com # your domain 
    http:
      paths:
      - backend:
          service:
            name: ameta-banking-core-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sabi.dev2.katsupay.com
    secretName: lets-encrypt-core-bank-web
